<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fetch Park</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="password_cap">PASSWORD</string>
    <string name="email_address">Email address</string>
    <string name="email">EMAIL</string>
    <string name="kirkwood">Kirkwood</string>
    <string name="make_your_order_and_enjoy_our_delicious_n_cookies_and_cakes">Make your order and enjoy your company with\nyour pup and the community.</string>
    <string name="proceed_to_menu">proceed to menu</string>
    <string name="proceed_to_checkout">proceed to checkout</string>
    <string name="proceed_to_payment">proceed to payment</string>
    <string name="points_you_will_earn">Points you will earn</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_to_our_store">Welcome to Fetch Park POS</string>
    <string name="forgot_password_text">Forgot password</string>
    <string name="please_change_your_password_via_mobile_app">Please change your password via mobile app</string>
    <string name="login_again">LOGIN AGAIN</string>
    <string name="login_again_text">LOGIN AGAIN</string>
    <string name="your_username_and_password_does_not_match">Your username and password does not match</string>
    <string name="check_your_internet_connection_settings_n_and_try_again">Check your Internet connection settings \n and try again</string>
    <string name="guest">GUEST</string>
    <string name="crew">CREW</string>
    <string name="make_an_order">Make an order</string>
    <string name="available_wi_fi_networks">Available Wi-fi networks</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="no_connection">No Connection</string>
    <string name="not_connected">not connected</string>
    <string name="connecting">Connecting....</string>
    <string name="try_again">try again</string>
    <string name="connect">connect</string>
    <string name="hot_box_2">Hot Box 2</string>
    <string name="blank_email">You must enter your email!</string>
    <string name="blank_special">You must enter Special Instructions!</string>
    <string name="blank_password">You must enter your password!</string>
    <string name="invalid_email">Please select a valid email!</string>
    <string name="invalid_enter_email">Please enter a valid email!</string>
    <string name="invalid_name">Please enter Name!</string>
    <string name="invalid_GiftCard">Please enter Gift Card!</string>
    <string name="invalid_Promocode">Please enter Promo Code!</string>
    <string name="invalid_surname">Please enter SurName!</string>
    <string name="invalid_phone">Please enter phone!</string>
    <string name="open">OPEN</string>
    <string name="new_order">New Order</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By:</string>
    <string name="_09_03_am">09:03 AM</string>
    <string name="_44565">#44565</string>
    <string name="alex_bauman">Alex Bauman</string>
    <string name="check_connection">Check Connection</string>
    <string name="connection">Connection</string>
    <string name="gps_not_found_title">GPS location not enabled</string>
    <string name="gps_not_found_message">Please enable location permission so we can get list of all wifi\'s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="msg_gps_settings">GPS is settings</string>
    <string name="msg_gps_settings_confirmation">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="label_settings">Settings</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">Ok</string>
    <string name="no_location_set">No Location Set</string>
    <string name="title_open">Open</string>
    <string name="title_open_time">09:03 am</string>
    <string name="orders">Orders</string>
    <string name="deliveries">Deliveries</string>
    <string name="menu">Menu</string>
    <string name="time_management">Time Management</string>
    <string name="store">Store</string>
    <string name="settings">Printer Test</string>
    <string name="logout">Logout</string>
    <string name="title_device_id">Device ID - %1$s</string>
    <string name="title_version">V %1$s</string>
    <string name="angelina">Angelina</string>
    <string name="manager">manager</string>
    <string name="clock_out">Clock Out</string>
    <string name="clock_in">Clock In</string>
    <string name="dismiss">Dismiss</string>
    <string name="clocked_in">Clocked In</string>
    <string name="clocked_out">Clocked Out</string>
    <string name="powered_by">Powered by</string>
    <string name="oper">OPER</string>
    <string name="dummy_mail_id">angeakman@mail.com</string>
    <string name="_text"> - </string>
    <string name="cart">Cart</string>
    <string name="_3101_s_grand_blvd_st_louis_mo">3101 S Grand Blvd, St. Louis, MO</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="action">Action</string>
    <string name="clocked_in_">Clocked In:</string>
    <string name="employee">Employee</string>
    <string name="assigned">Assigned</string>
    <string name="position">Position</string>
    <string name="delivery">Delivery</string>
    <string name="dummy_mobile_number">608-851-6889</string>
    <string name="dummy_store_name">Kirkwood Hot Box Cookies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">about</string>
    <string name="Head_manager_Jack_Lewis">Head manager – Jack Lewis</string>
    <string name="sunday">Sunday</string>
    <string name="ordering_hours">Ordering hours</string>
    <string name="assigned_emplooyees">Assigned Employees</string>
    <string name="buffer_times">Buffer Times</string>
    <string name="pickup">Pickup</string>
    <string name="close">Closed</string>
    <string name="device_id">Device ID - 3fv987fk</string>
    <string name="dummyTime">10:15 AM</string>
    <string name="rickybaummm_mail_com">rickybaummm@mail.com</string>
    <string name="print_the_label">Print Receipt</string>
    <string name="print_foh_receipt">Print FOH Receipt</string>
    <string name="print_boh_receipt">Print BOH Receipt</string>
    <string name="printer_address">Printer address</string>
    <string name="customer">CUSTOMER</string>
    <string name="_608_851_6889">608–851–6889</string>
    <string name="rick_bauman">Rick Bauman</string>
    <string name="promised_time">PROMISED TIME:</string>
    <string name="_6_cookies">6 Cookies</string>
    <string name="are_you_sure_log_out">Are you sure?</string>
    <string name="log_out">"Log Out</string>
    <string name="card_amp_bow">Gift Card</string>
    <string name="_card_amp_bow_">Gift Card :</string>
    <string name="_card_amp_bow">Card &amp; Bow:</string>
    <string name="special_instructions">Special instructions :</string>
    <string name="label_special_instructions">Special instructions (optional)</string>
    <string name="_140">$140</string>
    <string name="_40">40</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="received">Received</string>
    <string name="card_Bow">Card &amp; Bow</string>
    <string name="dispatched">Dispatched</string>
    <string name="dispatched_order">Dispatched Order</string>
    <string name="redispatch">Redispatch</string>
    <string name="new_text">New</string>
    <string name="packaging">Packing</string>
    <string name="refunded">Refunded</string>
    <string name="order_total">Order Total : %s </string>
    <string name="packed">Packed</string>
    <string name="complete_order">Complete Order</string>
    <string name="assign_driver">Assign Driver</string>
    <string name="auto_assign_driver">Auto Assign Driver</string>
    <string name="snooze_item">Snooze Item</string>
    <string name="assign_driver_text">Assign Driver:</string>
    <string name="confirm">Confirm</string>
    <string name="driver">Driver</string>
    <string name="order_44564">Order #</string>
    <string name="placed">Placed:</string>
    <string name="_07_17_2022_02_34_pm">07/17/2022, 02:34 PM</string>
    <string name="total">total</string>
    <string name="angelina_rickman">Angelina Rickman</string>
    <string name="order">ORDER</string>
    <string name="received_order">Receive Order</string>
    <string name="packing_order">Pack Order</string>
    <string name="completed_order">Complete Order</string>
    <string name="statusLog">STATUS LOG</string>
    <string name="tracking">Tracking</string>
    <string name="tracking_map">Tracking Map</string>
    <string name="zoom_map">Zoom map</string>
    <string name="destination">Destination</string>
    <string name="message_to_driver">Message to Driver</string>
    <string name="order_id">ORDER ID</string>
    <string name="order_type">Order type</string>
    <string name="status">Status</string>
    <string name="promised_time_text">Promised Time</string>
    <string name="order_Placed">order Placed</string>
    <string name="_09_00_am">09:00 AM</string>
    <string name="all">All</string>
    <string name="in_store">In-Store</string>
    <string name="in_store_text">In Store</string>
    <string name="today">Today</string>
    <string name="order_placed">Order placed</string>
    <string name="delivered">Delivered</string>
    <string name="delivered_order">Delivered Order</string>
    <string name="status_text">Status:</string>
    <string name="select">Select</string>
    <string name="popular">Popular</string>
    <string name="select_from_list">Select from list</string>
    <string name="label_from">From</string>
    <string-array name="statusArray">
        <item>All</item>
        <item>New</item>
        <item>Packing</item>
        <item>Received</item>
        <item>Cancelled</item>
        <item>Completed</item>
    </string-array>
    <string-array name="dateArray">
        <item>Active</item>
        <item>New</item>
        <item>Past</item>
    </string-array>
    <string name="new_order_received">New order received</string>
    <string name="please_put_the_card_into_the_box_with_cookies">Please put the card into the box with cookies</string>
    <string name="dummy_prize">$0</string>
    <string name="tax_percentage">%0</string>
    <string name="dummy_promo_code_prize">-$5</string>
    <string name="promocode">Promocode</string>
    <string name="tips">Tips</string>
    <string name="total_prize">Total</string>
    <string name="cookies">Cookies</string>
    <string name="classic_cookies">Classic Cookies</string>
    <string name="ice_cream">ICE CREAM</string>
    <string name="packs">PACKS</string>
    <string name="boxes">BOXES</string>
    <string name="sandwich">SANDWICH</string>
    <string name="cakes">CAKES</string>
    <string name="catering">CATERING</string>
    <string name="take_n_bake">TAKE N BACK</string>
    <string name="drinks">DRINKS</string>
    <string name="baked_for_good">BACKED FOR GOOD</string>
    <string name="tax">Tax</string>
    <string name="order_prize">Order</string>
    <string name="label_sub_total">Sub Total</string>
    <string name="best_regards">Best regards!</string>
    <string name="i_want_a_blue_bow">I want a blue bow</string>
    <string name="no_order_for_today">No Orders</string>
    <string name="no_order_for">No Orders For %s</string>
    <string name="no_added_any_one_menu">Any One Product Not Added</string>
    <string name="no_deliveries_for">No Deliveries For %s</string>
    <string name="no_deliveries_for_today">No Deliveries</string>
    <string name="please_call_me_and_i_ll_meet_you">Please call me and I\'ll meet you</string>
    <string name="active">Active</string>
    <string name="membership">Membership</string>
</resources>