<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_3sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/color_DFE7EB"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/employeeNameAppCompatTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/circular_std_book"
                android:textColor="@color/black"
                android:textSize="@dimen/_6ssp"
                tools:text="@string/action" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/employeePositionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/circular_std_book"
                android:textColor="@color/black"
                android:textSize="@dimen/_6ssp"
                tools:text="@string/date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/employeeDateAppCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_std_book"
                android:layout_marginEnd="@dimen/_2sdp"
                android:gravity="start"
                android:textColor="@color/color_777776"
                android:textSize="@dimen/_6ssp"
                tools:text="@string/_09_03_am" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>